# devcontainer-python-uv-template

./: .env.sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile-advanced-notes.md  LICENSE  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.extend.yml
.github/: copilot-instructions.md
conf/: logging_config.py
docs/: blog-article.md
src/: example.main.py  main.py
src/backend/: db_setup.py
src/config/: logging_config.py
src/db/: db_setup.py
src/python_project_template/db/: db_setup.py
tests/: test_main.py
