[project]
name = "python-project-template"
version = "0.1.0"
dependencies = [
    "fastapi>=0.115.11",
]

[tool.ruff]
# automatically fix issues like removing unused imports
fix = true

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
force-wrap-aliases = true
split-on-trailing-comma = true

[tool.mypy]
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = false

[tool.uv]
dev-dependencies = [
    "black",
    "ruff",
    "pre-commit",
    "mypy",
    "debugpy>=1.8.13",
]
